[package]
name = "postquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
chrono = "0.4.19"
log = "0.4.14"
tokio-postgres = { version="0.7.2", features = ["with-chrono-0_4"] }
tokio = { version = "1.16", features = ["full"] }
futures-util = "0.3.19"
itertools = "0.10.5"